# jspp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_ZH.md  jspp_builtin_type.d.ts  new_backend.py  xmake.lua
.github/workflows/: ci.yml
example/addon-qjs/: CMakeLists.txt  README.md  example.cc  example.js
example/node-addon/: CMakeLists.txt  README.md  example.cc  example.js  package-lock.json  package.json
src-quickjs/: Configure.cmake
src-quickjs/jspp-backend/: QjsEngine.cc  QjsEngine.h  QjsException.cc  QjsHelper.cc  QjsHelper.h  QjsReference.cc  QjsReference.inl  QjsScope.cc  QjsScope.h  QjsTrampoline.cc  QjsValue.cc
src-quickjs/jspp-backend/queue/: JobQueue.cc  JobQueue.h
src-quickjs/jspp-backend/traits/: TraitEngine.h  TraitException.h  TraitIncludes.h  TraitReference.h  TraitScope.h  TraitValue.h
src-stub/: Configure.cmake  README.md
src-stub/jspp-backend/: StubEngine.cc  StubEngine.h  StubException.cc  StubHelper.cc  StubHelper.h  StubReference.cc  StubReference.inl  StubScope.cc  StubScope.h  StubScope.inl  StubValue.cc
src-stub/jspp-backend/traits/: TraitEngine.h  TraitException.h  TraitIncludes.h  TraitReference.h  TraitScope.h  TraitValue.h
src-v8/: Configure.cmake
src-v8/jspp-backend/: V8Engine.cc  V8Engine.h  V8Exception.cc  V8Helper.cc  V8Helper.h  V8Reference.cc  V8Reference.inl  V8Scope.cc  V8Scope.h  V8Scope.inl  V8Trampoline.cc  V8Value.cc
src-v8/jspp-backend/traits/: TraitEngine.h  TraitException.h  TraitIncludes.h  TraitReference.h  TraitScope.h  TraitValue.h
src/jspp/: Jspp.h  Macro.h
src/jspp/binding/: BindingUtils.h  MetaBuilder.h  NativeInstanceImpl.h  ReturnValuePolicy.h  TypeConverter.h
src/jspp/binding/traits/: FunctionTraits.h  Polymorphic.h  TypeTraits.h
src/jspp/core/: Concepts.h  Engine.cc  Engine.h  EngineScope.cc  EngineScope.h  Exception.cc  Exception.h  Fwd.h  InstancePayload.h  MetaInfo.h  NativeInstance.h  Reference.cc  Reference.h  Reference.inl  TrackedHandle.cc  TrackedHandle.h  Trampoline.cc  Trampoline.h  Utils.h  V8TypeAlias.h  Value.cc  Value.h  ValueHelper.h  ValueHelper.inl
src/v8kit/binding/: BindingUtils.h  MetaBuilder.h  NativeInstanceImpl.h  ReturnValuePolicy.h  TypeConverter.h
src/v8kit/binding/traits/: TypeTraits.h
src/v8kit/core/: Engine.cc  Engine.h  EngineScope.cc  EngineScope.h  InstancePayload.h  MetaInfo.h  NativeInstance.h  Reference.h  Reference.inl  TrackedHandle.cc  TrackedHandle.h  Trampoline.cc  Trampoline.h
test/: CMakeLists.txt  benchmark_test.cc  binding_test.cc  bugs_test.cc  core_test.cc  main.cc  module_test.cc  namespace_utils_test.cc  qjs_backend_test.cc  qjs_bytecode.js  qjs_gc_test.cc  type_converter_test.cc
